[gd_scene load_steps=6 format=3 uid="uid://bep0nr7k0pywb"]

[ext_resource type="Script" path="res://UI/gameUI.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ff8etg6ogfgi" path="res://UI/image/按钮_暂停.png" id="3"]
[ext_resource type="Texture2D" uid="uid://7esfhkf3fxc8" path="res://UI/image/按钮_播放.png" id="4"]

[sub_resource type="InputEventKey" id="InputEventKey_lhxxr"]
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_unwkx"]
events = [SubResource("InputEventKey_lhxxr")]

[node name="GameUI2" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -198.0
offset_right = 141.0
grow_vertical = 0
alignment = 2

[node name="test1" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
offset_top = 130.0
offset_right = 141.0
offset_bottom = 162.0
text = "生成敌人"

[node name="showRange" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
offset_top = 166.0
offset_right = 141.0
offset_bottom = 198.0
text = "显示攻击范围"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -233.0
offset_right = 233.0
offset_bottom = 49.0
grow_horizontal = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
offset_top = 11.0
offset_right = 160.0
offset_bottom = 38.0
text = "基地核心生命值剩余："

[node name="baseCoreHpLeft" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
offset_left = 164.0
offset_top = 11.0
offset_right = 197.0
offset_bottom = 38.0
text = "-111"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
clip_contents = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -101.0
offset_right = -23.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="pause" type="TextureButton" parent="HBoxContainer3"]
custom_minimum_size = Vector2i(80, 80)
offset_right = 80.0
offset_bottom = 80.0
size_flags_horizontal = 8
toggle_mode = true
shortcut = SubResource("Shortcut_unwkx")
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="VBoxContainer/test1" to="." method="_on_test_1_pressed"]
[connection signal="pressed" from="VBoxContainer/showRange" to="." method="_on_show_range_pressed"]
[connection signal="toggled" from="HBoxContainer3/pause" to="." method="_on_pause_toggled"]
